--- a/CuaHangThucPham/CuaHangThucPham/Views/Blog/Index.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/Blog/Index.cshtml
@@ -1,119 +1,32 @@
-﻿
+﻿@using CuaHangThucPham.Models;
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_layoutRight.cshtml";
+    var blogs = (List<CuaHangThucPham.Models.Blog>)ViewBag.Blogs;
 }
 <div class="container">
-    <ul class="breadcrumb">
-        <li><a href="\Home\Index"><i class="fa fa-home"></i></a></li>
-        <li><a href="\Blog\Index">Bài viết</a></li>
-    </ul>
     <div class="row">
 
         <div id="content" class="col-sm-9">
-            <div class="blog1 blog">
-                <div class="blog_img"><img src="~/Public/image/blog/blog_4.jpg" alt="" /></div>
-                <h4 class="p-name"><a href="singale-blog.html">Image Post Format</a></h4>
-                <ul class="blog-meta">
-                    <li><i class="fa fa-clock-o"></i><span class="dt-published">December 23, 2015</span></li>
-                    <li><i class="fa fa-comment-o"></i><span>2</span> Comment</li>
-                    <li><i class="fa fa-user"></i><span><a rel="author" title="Posts by Admin" href="#">Admin admin</a></span></li>
-                </ul>
-                <p class="p-summary"></p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae provident minus similique porro assumenda illo dolore ducimus vero ipsum illum ipsa velit, deleniti accusantium repellat facilis tempora ab consectetur! Sequi, aperiam,
-                    dignissimos! Molestias quidem temporibus, earum deleniti, quae voluptatibus cum, doloremque libero dolorum sapiente neque saepe magnam ullam nisi mollitia itaque voluptas illo pariatur inventore, …..
-                </p>
-                <a class="u-url" href="singale-blog.html">read more</a>
-            </div>
-            <div class="blog2 blog">
-                <div class="blog_img video">
-                    <video controls>
-                        <source type="video/mp4" src="~/Public/image/Lighthouse.mp4">
-                        <source type="video/ogg" src="mov_bbb.ogg">
-                        Your browser does not support HTML5 video.
-                    </video>
+            @for (int i = 1; i < blogs.Count; i ++)
+            {
+                <div class="blog1 blog">
+                    <div class="blog_img"><img src="~/Public/image/blog/@blogs[i].Image" alt="" /></div>
+                    <h4 class="p-name"><a href="/Blog/SingaleBlog/@blogs[i].BlogID">@blogs[i].Title</a></h4>
+                    <ul class="blog-meta">
+                        <li><i class="fa fa-clock-o"></i><span class="dt-published">@blogs[i].DateAdded</span></li>
+                        <li><i class="fa fa-comment-o"></i><span>@i</span> Bình luận</li>
+                        <li><i class="fa fa-user"></i><span><a rel="author" title="Posts by Admin" href="#">@blogs[i].Customer.FirstName @blogs[i].Customer.LastName</a></span></li>
+                    </ul>
+                    <p class="p-summary"></p>
+                    <p>
+                        @blogs[i].Content.Substring(0,300)...
+                    </p>
+                    <a class="u-url" href="/Blog/SingaleBlog/@blogs[i].BlogID">Xem thêm</a>
                 </div>
-                <h4 class="p-name"><a href="singale-blog.html">Video Post Format</a></h4>
-                <ul class="blog-meta">
-                    <li><i class="fa fa-clock-o"></i><span class="dt-published">December 23, 2015</span></li>
-                    <li><i class="fa fa-comment-o"></i><span>2</span> Comment</li>
-                    <li><i class="fa fa-user"></i><span><a rel="author" title="Posts by Admin" href="#">Admin</a></span></li>
-                </ul>
-                <p class="p-summary"></p>
-                <p>
-                    Repellat minus perferendis dolor, animi dignissimos aut maiores molestiae perspiciatis doloremque, recusandae blanditiis reprehenderit voluptatibus unde ut? Ullam at nihil omnis consequatur, assumenda autem dolor quis velit fugiat
-                    magni, pariatur. Beatae modi quod, quia facilis voluptatum iusto atque vero, fugiat perferendis, officia maiores illo explicabo nesciunt doloribus eum praesentium quasi. Sint tempore reiciendis nisi, ex …..
-                </p>
-                <a class="u-url" href="singale-blog.html">read more</a>
+            }
             </div>
-            <div class="blog3 blog">
-                <div class="blog_img owl-carousel home-slider owl-theme gellery">
-                    <div class="item">
-                        <a href="#"><img src="~/Public/image/blog/blog_1.jpg" alt="" class="img-responsive" /></a>
-                    </div>
-                    <div class="item">
-                        <a href="#"><img src="~/Public/image/blog/blog_2.jpg" alt="" class="img-responsive" /></a>
-                    </div>
-                    <div class="item">
-                        <a href="#"><img src="~/Public/image/blog/blog_3.jpg" alt="" class="img-responsive" /></a>
-                    </div>
-                </div>
-                <h4 class="p-name"><a href="singale-blog.html">Gellery Post Format</a></h4>
-                <ul class="blog-meta">
-                    <li><i class="fa fa-clock-o"></i><span class="dt-published">December 23, 2015</span></li>
-                    <li><i class="fa fa-comment-o"></i><span>2</span> Comment</li>
-                    <li><i class="fa fa-user"></i><span><a rel="author" title="Posts by Admin" href="#">Admin</a></span></li>
-                </ul>
-                <p class="p-summary"></p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae provident minus similique porro assumenda illo dolore ducimus vero ipsum illum ipsa velit, deleniti accusantium repellat facilis tempora ab consectetur! Sequi, aperiam,
-                    dignissimos! Molestias quidem temporibus, earum deleniti, quae voluptatibus cum, doloremque libero dolorum sapiente neque saepe magnam ullam nisi mollitia itaque voluptas illo pariatur inventore, …..
-                </p>
-                <a class="u-url" href="singale-blog.html">read more</a>
-            </div>
-            <div class="blog4 blog">
-                <div class="blog_img"> <img src="~/Public/image/blog/blog_5.jpg" alt="" /> </div>
-                <h4 class="p-name"><a href="singale-blog.html">Image Post Format</a></h4>
-                <ul class="blog-meta">
-                    <li><i class="fa fa-clock-o"></i><span class="dt-published">December 23, 2015</span></li>
-                    <li><i class="fa fa-comment-o"></i><span>2</span> Comment</li>
-                    <li><i class="fa fa-user"></i><span><a rel="author" title="Posts by Admin" href="#">Admin</a></span></li>
-                </ul>
-                <p class="p-summary"></p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non blanditiis, voluptas, esse at iste nulla in ratione quas incidunt aspernatur nostrum, veniam expedita recusandae quis libero aliquid animi, repellat harum velit eum assumenda.
-                    Asperiores perferendis sequi modi, sunt quasi veniam laborum, ea ducimus illum velit quam iure ipsam eligendi similique. Labore, dolore commodi sequi iste …..
-                </p>
-                <a class="u-url" href="singale-blog.html">read more</a>
-            </div>
-        </div>
         <!-- end blog-home -->
-
-        <div id="column-right" class="col-sm-3 hidden-xs column-left">
-            <div class="column-block">
-                <div class="columnblock-title">Danh mục</div>
-                <div class="blog-categories-block category_block">
-                    <div class="list-group">
-                        <a class="list-group-item" href="#">Lương thực</a>
-                        <a class="list-group-item" href="#">Thực phẩm chế biến</a>
-                        <a class="list-group-item" href="#">Thực phẩm đóng hộp</a>
-                        <a class="list-group-item" href="#">Gia vị</a>
-                        <a class="list-group-item" href="#">Thực phẩm tươi sống</a>
-                        <a class="list-group-item last" href="#">Thực phẩm khác</a>
-                    </div>
-                </div>
-            </div>
-            <div class="productblock-title">Recent Posts</div>
-            <div class="blog-categories-block category_block">
-                <div class="list-group">
-                    <a class="list-group-item" href="#">Gallery Post Format</a> <a class="list-group-item" href="#">Recent Posts</a> <a class="list-group-item" href="
-    #">Gallery Post Format</a> <a class="list-group-item" href="#">Standard Post Format</a> <a class="list-group-item last" href="#">Image Post Format</a>
-                </div>
-            </div>
-
             <!-- end blog-sidebar -->
-
-        </div>
     </div>
 </div>
