--- a/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutLeft.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutLeft.cshtml
@@ -168,10 +168,10 @@
             <div class="navbar-collapse">
                 <ul class="main-navigation">
                     <li><a href="/Home/Index" class="parent">Trang chủ</a> </li>
-                    <li><a href="/Categories/Index" class="parent">Thực phẩm</a> </li>
-                    <li><a href="/Categories/Index" class="parent">Rau củ</a> </li>
-                    <li><a href="/Categories/Index" class="parent">Gia vị</a> </li>
-                    <li><a href="/Categories/Index" class="parent">Đồ uống</a> </li>
+                    <li><a href="/Categories/Index?CategoriesID=1" class="parent">Thực phẩm</a> </li>
+                    <li><a href="/Categories/Index?CategoriesID=2" class="parent">Rau củ</a> </li>
+                    <li><a href="/Categories/Index?CategoriesID=5" class="parent">Gia vị</a> </li>
+                    <li><a href="/Categories/Index?CategoriesID=7" class="parent">Đồ uống</a> </li>
                     <li><a href="/Blog/Index" class="parent">Bài viết</a></li>
                     <li><a href="/Home/About">Giới thiệu</a></li>
                     <li><a href="/Home/Contact">Liên hệ</a> </li>
@@ -191,38 +191,81 @@
                     <div class="category_block">
                         <ul class="box-category treeview-list treeview">
                             <li>
-                                <a href="#" class="activSub">Lương thực</a>
+                                <a href="/Categories/Index" class="activSub">Tất cả thực phẩm</a>
+                            </li>
+                            <li>
+                                <a href="/Categories/Index?CategoriesID=1" class="activSub">Lương thực</a>
                                 <ul>
-                                    <li><a href="#">Gạo các loại</a></li>
-                                    <li><a href="#">Bột các loại</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=1">Gạo các loại</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=2">Bột các loại</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=3">Bột các loại</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=4">Bột các loại</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="activSub">Rau, củ, quả</a>
+                                <a href="/Categories/Index?CategoriesID=2" class="activSub">Rau, củ, quả</a>
                                 <ul>
-                                    <li><a href="#">Dạng củ</a></li>
-                                    <li><a href="#">Dạng hạt</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=5">Dạng củ</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=6">Dạng hạt</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=7">Dạng lá</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=8">Dạng nấm</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=9">Dạng quả</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=10">Rau, củ, quả khác</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="activSub">Thực phẩm chế biến</a>
+                                <a href="/Categories/Index?CategoriesID=3" class="activSub">Thực phẩm chế biến</a>
                                 <ul>
-                                    <li><a href="#">Rau củ chế biến</a></li>
-                                    <li>
-                                        <a href="#" class="activSub">Thịt chế biến</a>
-                                        <ul>
-                                            <li><a href="#">Lạp xưởng</a></li>
-                                            <li><a href="#">Thịt viên</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Thủy sản chế biến</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=11">Lạp xưởng</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=12">Rau củ chế biến</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=13">Thịt chế biến</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=14">Thịt viên</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=15">Thủy sản chế biến</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=16">Thực phẩm chế biến khác</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Thực phẩm đóng hộp</a></li>
-                            <li><a href="#">Gia vị</a></li>
-                            <li><a href="#">Thực phẩm tươi sống</a></li>
-                            <li><a href="#">Thức uống</a></li>
-                            <li><a href="#">Thực phẩm khác</a></li>
+                            <li>
+                                <a href="/Categories/Index?CategoriesID=4">Thực phẩm đóng hộp</a>
+                                <ul>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=17">Rau củ đóng hộp</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=18">Thịt đóng hộp</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=19">Thủy sản đóng hộp</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/Categories/Index?CategoriesID=5">Gia vị</a>
+                                <ul>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=20">Dầu ăn</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=21">Gia vị</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=22">Nguyên liệu khô</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/Categories/Index?CategoriesID=6">Thực phẩm tươi sống</a>
+                                <ul>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=23">Thịt bò</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=24">Thịt gà</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=25">Thịt lợn</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=26">Thủy hải sản</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=27">Trứng</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/Categories/Index?CategoriesID=7">Thức uống</a>
+                                <ul>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=28">Trà</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=29">Cafe</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=30">Sữa</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=34">Bia</a></li>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=35">Nước giải khát</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/Categories/Index?CategoriesID=8">Thực phẩm khác</a>
+                                <ul>
+                                    <li><a href="/SubCategories/Index?SubCategoriesID=31">Bánh, kẹo, mứt, đồ ngọt</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -260,7 +303,7 @@
                                     </label>
                                 </div>
                             </div>
-                            <a class="list-group-item">Size</a>
+                            <a class="list-group-item">Kích thước</a>
                             <div class="list-group-item">
                                 <div id="filter-group3">
                                     <label class="checkbox">
@@ -296,7 +339,7 @@
                                 <a href="#"><img src="~/Public/image/product/product5.jpg" alt="women's clothing" title="women's clothing" class="img-responsive" /></a>
                                 <div class="button-group">
                                     <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
-                                    <button type="button" class="addtocart-btn">Add to Cart</button>
+                                    <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
                                     <button type="button" class="compare" data-toggle="tooltip" title="Compare this Product"><i class="fa fa-exchange"></i></button>
                                 </div>
                             </div>
@@ -306,7 +349,7 @@
                             </div>
                             <div class="button-group">
                                 <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
-                                <button type="button" class="addtocart-btn">Add to Cart</button>
+                                <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
                                 <button type="button" class="compare" data-toggle="tooltip" title="Compare this Product"><i class="fa fa-exchange"></i></button>
                             </div>
                         </div>
@@ -317,7 +360,7 @@
                                 <a href="#"><img src="~/Public/image/product/product1.jpg" alt="women's clothing" title="women's clothing" class="img-responsive" /></a>
                                 <div class="button-group">
                                     <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
-                                    <button type="button" class="addtocart-btn">Add to Cart</button>
+                                    <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
                                     <button type="button" class="compare" data-toggle="tooltip" title="Compare this Product"><i class="fa fa-exchange"></i></button>
                                 </div>
                             </div>
@@ -327,7 +370,7 @@
                             </div>
                             <div class="button-group">
                                 <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
-                                <button type="button" class="addtocart-btn">Add to Cart</button>
+                                <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
                                 <button type="button" class="compare" data-toggle="tooltip" title="Compare this Product"><i class="fa fa-exchange"></i></button>
                             </div>
                         </div>
